# PINNs

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  conftest.py  diagnostics.py  lateral_cauchy_cylinder.py  metrics.py  pyproject.toml  validate.py
.github/workflows/: ci.yml
docs/: SIMULACIONES.md
examples/: ex1_manufactured.py  ex2_bessel.py  ex3_solver_heterogeneous.py  ex4_noise.py  ex5_frequency_sweep.py  ex6_weight_sensitivity.py  experimentos.ipynb
numerics/: __init__.py  heat1d.py  manufactured.py
results/: tabla1.csv
results/ex1/: raw.csv
results/ex2/: raw.csv
results/ex3/: raw.csv
scripts/: aten_curvas.py  benchmark.py  noise_ld_map.py  tabla1.py  vis_espaciotemporal.py
src/lateralcauchy/: __init__.py  diagnostics.py  experiments.py  metrics.py  pinn.py  plotting.py  runconfig.py
src/lateralcauchy/numerics/: disk_modes.py  heat1d.py  manufactured.py  reference.py
tests/: test_diagnostics.py  test_disk_modes.py  test_experiments.py  test_heat1d.py  test_manufactured.py  test_metrics.py  test_pinn.py  test_plotting.py  test_reference.py
